Add ci-cd and swagger and correct service implementation